--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chai": "~3.1.0",
     "chai-as-promised": "~5.1.0",
     "chalk": "~1.1.0",
+    "cz-conventional-changelog": "^2.0.0",
     "dateformat": "~1.0.8-1.2.3",
     "debug": "~2.0.0",
     "del": "~1.2.0",
@@ -64,7 +65,6 @@
     "karma-firefox-launcher": "~0.1.3",
     "karma-growl-reporter": "~0.1.1",
     "karma-mocha": "~0.2.0",
-    "phantomjs-prebuilt": "~2.1.4",
     "karma-phantomjs-launcher": "~1.0.0",
     "karma-safari-launcher": "~0.1.1",
     "karma-sinon": "~1.0.3",
@@ -72,11 +72,17 @@
     "method-override": "~2.3.4",
     "mocha": "~2.2.5",
     "node-notifier": "~4.0.3",
+    "phantomjs-prebuilt": "~2.1.4",
     "plato": "~1.2.0",
     "q": "~1.0.1",
     "sinon": "~1.12.2",
     "sinon-chai": "~2.6.0",
     "wiredep": "~2.2.2",
     "yargs": "~3.15.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
