--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "gulp-uglify": "~1.0.1",
     "gulp-useref": "~1.0.2",
     "gulp-util": "~3.0.1",
+    "jasmine": "^2.5.3",
     "jshint-stylish": "~2.0.1",
     "karma": "~0.13.2",
     "karma-chai": "~0.1.0",
