chore(jshint): Added global exception rules for test linting

--- a/.jshintrc
+++ b/.jshintrc
@@ -55,6 +55,14 @@
     "node": true,
 
     "globals": {
-        "angular": false
+        "angular": false,
+        "describe"   : false,
+        "it"         : false,
+        "before"     : false,
+        "beforeEach" : false,
+        "after"      : false,
+        "afterEach"  : false,
+        "inject"  : false,
+        "expect"  : false
     }
 }
