--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "serve-favicon": "~2.0.1"
   },
   "devDependencies": {
+    "angular-mocks": "^1.6.2",
     "browser-sync": "~2.12.2",
     "chai": "~3.1.0",
     "chai-as-promised": "~5.1.0",
@@ -65,6 +66,7 @@
     "karma-firefox-launcher": "~0.1.3",
     "karma-growl-reporter": "~0.1.1",
     "karma-mocha": "~0.2.0",
+    "karma-ng-html2js-preprocessor": "^1.0.0",
     "karma-phantomjs-launcher": "~1.0.0",
     "karma-safari-launcher": "~0.1.1",
     "karma-sinon": "~1.0.3",
