--- a/bower.json
+++ b/bower.json
@@ -21,14 +21,17 @@
     "angular": "~1.5",
     "angular-animate": "~1.5.9",
     "angular-sanitize": "~1.5.9",
-    "bootstrap": "~3.3.6",
+    "bootstrap": "^3.3.7",
     "extras.angular.plus": "~0.9.2",
     "font-awesome": "~4.5.0",
     "moment": "~2.12.0",
     "toastr": "~2.1.2",
     "angular-bootstrap": "~1.2.5",
     "angular-ui-router": "1.0.0-rc.1",
-    "angular-iso-country-filter": "^0.0.1"
+    "angular-iso-country-filter": "^0.0.1",
+    "angular-formly": "^8.4.1",
+    "angular-formly-templates-bootstrap": "^6.3.2",
+    "api-check": "^7.5.5"
   },
   "resolutions": {
     "angular": "~1.5.9"
